--- a/index.html
+++ b/index.html
@@ -45,7 +45,21 @@
     <section class="intro">
         <div class="container">
             <header class="main-header">
-
+                <div class="row justify-content-between">
+                    <div class="col-auto">
+                        <a href="index.html" class="logo"><img src="img/logo.svg" alt="Cargi" class="logo__image"></a>
+                    </div>
+                    <div class="col-auto">
+                        <nav class="menu">
+                            <a href="#" class="menu__link">Типы работ</a>
+                            <a href="#" class="menu__link">Видео</a>
+                            <a href="#" class="menu__link">Офис на колесах</a>
+                            <a href="#" class="menu__link">Услуги</a>
+                            <a href="#" class="menu__link">Контакты</a>
+                            <button type="button" class="menu__button">Заказать звонок</button>
+                        </nav>
+                    </div>
+                </div>
             </header>
 
             <div class="intro__content">
