--- a/index.html
+++ b/index.html
@@ -1,76 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cargi</title>
-    <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cargi</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 
-    <div class="top-header">
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-auto">
-                    <nav class="social">
-                        <a href="#" target="_blank" class="social__link"><i class="icon-facebook"></i></a>
-                        <a href="#" target="_blank" class="social__link"><i class="icon-instagram"></i></a>
-                        <a href="#" target="_blank" class="social__link"><i class="icon-vk"></i></a>
-                    </nav>
-                </div>
-                <div class="col-auto">
-                    <div class="top-header__info">
-                        <i class="icon-phone"></i> <a href="tel:+74951085240" class="top-header__link">+7 (495) 108 - 52 - 40</a>
-                    </div>
-                    <div class="top-header__info">
-                        <i class="icon-mail top-header__icon"></i>
-                        <a href="mailto:info@cargi.ru" class="top-header__link">info@cargi.ru</a>
-                        <span class="top-header__dot"></span>
-                        <a href="mailto:manager@cargi.ru" class="top-header__link">manager@cargi.ru</a>
-                    </div>
-                    <div class="top-header__info">
-                        <i class="icon-map top-header__icon"></i>
-                        Бережковская наб., д. 20 стр. 61
-                    </div>
-                    <div class="top-header__info">
-                        <i class="icon-clock top-header__icon"></i>
-                        Пнд - Вск: с 10:00 до 19:00
-                    </div>
-                </div>
-            </div>
+  <div class="top-header">
+    <div class="container">
+      <div class="row justify-content-between">
+        <div class="col-auto">
+          <nav class="social">
+            <a href="#" target="_blank" class="social__link"><i class="icon-facebook"></i></a>
+            <a href="#" target="_blank" class="social__link"><i class="icon-instagram"></i></a>
+            <a href="#" target="_blank" class="social__link"><i class="icon-vk"></i></a>
+          </nav>
         </div>
+        <div class="col-auto d-flex">
+          <div class="top-header__info">
+            <i class="icon-phone top-header__icon"></i> <a href="tel:+74951085240" class="top-header__link">+7 (495) 108 - 52 - 40</a>
+          </div>
+          <div class="top-header__info">
+            <i class="icon-mail top-header__icon"></i>
+            <a href="mailto:info@cargi.ru" class="top-header__link">info@cargi.ru</a>
+            <span class="top-header__dot"></span>
+            <a href="mailto:manager@cargi.ru" class="top-header__link">manager@cargi.ru</a>
+          </div>
+          <div class="top-header__info">
+            <i class="icon-map top-header__icon"></i>
+            Бережковская наб., д. 20 стр. 61
+          </div>
+          <div class="top-header__info">
+            <i class="icon-clock top-header__icon"></i>
+            Пнд - Вск: с 10:00 до 19:00
+          </div>
+        </div>
+      </div>
     </div>
-    
-    <section class="intro">
-        <div class="container">
-            <header class="main-header">
-                <div class="row justify-content-between">
-                    <div class="col-auto">
-                        <a href="index.html" class="logo"><img src="img/logo.svg" alt="Cargi" class="logo__image"></a>
-                    </div>
-                    <div class="col-auto">
-                        <nav class="menu">
-                            <a href="#" class="menu__link">Типы работ</a>
-                            <a href="#" class="menu__link">Видео</a>
-                            <a href="#" class="menu__link">Офис на колесах</a>
-                            <a href="#" class="menu__link">Услуги</a>
-                            <a href="#" class="menu__link">Контакты</a>
-                            <button type="button" class="menu__button">Заказать звонок</button>
-                        </nav>
-                    </div>
-                </div>
-            </header>
+  </div>
 
-            <div class="intro__content">
-                <div class="intro-type">
-                    <span></span>
-                </div>
-                <h1 class="intro__title"></h1>
-                <p class="intro__text"></p>
-            </div>
+  <section class="intro">
+    <div class="container">
+      <header class="main-header">
+        <div class="row justify-content-between">
+          <div class="col-auto">
+            <a href="index.html" class="logo"><img src="img/logo.svg" alt="Cargi" class="logo__image"></a>
+          </div>
+          <div class="col-auto">
+            <nav class="menu">
+              <a href="#" class="menu__link">Типы работ</a>
+              <a href="#" class="menu__link">Видео</a>
+              <a href="#" class="menu__link">Офис на колесах</a>
+              <a href="#" class="menu__link">Услуги</a>
+              <a href="#" class="menu__link">Контакты</a>
+              <button type="button" class="menu__button">Заказать звонок</button>
+            </nav>
+          </div>
         </div>
-    </section>
+      </header>
+
+      <div class="intro__content">
+        <div class="intro-type">
+          Тюнинг ателье 
+          <span>Cargi Studio</span>
+        </div>
+        <h1 class="intro__title">Новая жизнь вашего авто</h1>
+        <p class="intro__text">Основание компании Cargi. Первые четыре работы, выполненные нами в этом году, до сих пор радуют Наших первых клиентов.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="last-works">
+    <div class="container">
+      <h2 class="title"></h2>
+    </div>
+  </section>
+  
+  <i class="icon-clock circle__icon"></i>
 
 </body>
+
 </html>
